# rag-foundation

./: .dockerignore  .env.demo.example  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .semgrepignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  NOTICE  PRIVACY.md  README.md  RELEASE.md  SECURITY.md  SECURITY_PATTERNS.md  System_Prompt.md  TODO.md  docker-compose.demo.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json
backend/: .coveragerc  Dockerfile  alembic.ini  entrypoint.sh  openapi.yaml  pyproject.toml
backend/alembic/: env.py
backend/app/: auth.py  config.py  costs.py  db.py  file_types.py  genai.py  main.py  metrics.py  middleware.py  models.py  rate_limit.py  schemas.py  security_gate.py  telemetry.py  worker.py
backend/scripts/: check_admin_patterns.py  cleanup_tmp.py  create_first_admin.py  export_openapi.py  mark_stuck_documents_error.py
backend/tests/: conftest.py  test_admin_rbac.py  test_auth.py  test_auth_flows_real.py  test_chat_helpers.py  test_chat_history_limits.py  test_chat_request_schema.py  test_chat_stream_helpers.py  test_costs.py  test_gemini_rag.py  test_health_endpoints.py  test_infrastructure.py  test_logging_scrub.py  test_metadata_filters.py  test_metrics_endpoint.py  test_production_settings.py  test_rate_limit_headers.py  test_security_defaults_matrix.py  test_security_middleware.py  test_settings.py  test_soft_delete.py  test_sse_smoke.py  test_startup_cors_validation.py  test_streaming.py  (+6 more)
(+143 files in other folders)
